--- a/Project_EDA2.vcxproj
+++ b/Project_EDA2.vcxproj
@@ -144,6 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="functions.h" />
+    <ClInclude Include="userInterfaceFunctions.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="saveJobInfo.txt" />
