--- a/Project_EDA2.vcxproj.filters
+++ b/Project_EDA2.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClInclude Include="functions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="userInterfaceFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="saveSystem.txt">
